added code availability

--- a/report/report.tex
+++ b/report/report.tex
@@ -305,6 +305,10 @@ With additional tuning, the genetic algorithm may be able to approach the anneal
 
 Several heuristic methods for MTG booster draft deck construction have been presented and shown to generate performant results in seconds of run time. These approaches offer solutions to close the gap between drafting and dueling in simulated booster draft tournament play. Further trials involving simulated play would be necessary to fully explore how effective the decks crafted from these heuristic methods are, which may be the subject of future work. Moreover, statistical analysis of any differing trends in human and bot drafting may reveal oversights stemming from this project's reliance on human-generated draft pools.
 
+\section{Code Availability}
+
+All code for this project (including data) has been made available at the following public GitHub repository: https://github.com/gordonng123/DraftToDeck.
+
 \bibliography{refs.bib}
 
 \end{document}
